# amplifier-app-blog-creator

./: .env.example  .gitignore  HOW_I_BUILT_THIS.md  MIGRATION_NOTES.md  Makefile  PHASE5_STATUS.md  README.md  pyproject.toml
.amplifier/profiles/: blog-creator.md
src/amplifier/: __init__.py
src/amplifier/ccsdk_toolkit/: __init__.py
src/amplifier/utils/: __init__.py  logger.py
src/amplifier_app_blog_creator/: __init__.py  __main__.py  blog_writer.py  content_phase.py  feedback.py  illustration_phase.py  image_generator.py  main.py  models.py  session.py  writer.py
src/amplifier_app_blog_creator/cli/: __init__.py  input_handler.py  main.py  ui.py
src/amplifier_app_blog_creator/core/: __init__.py  models.py  workflow.py
src/amplifier_app_blog_creator/core/stages/: __init__.py  draft_generation.py  review.py  revision.py  style_extraction.py
src/amplifier_app_blog_creator/reviewers/: __init__.py  source_reviewer.py  style_reviewer.py
src/amplifier_app_blog_creator/vendored_toolkit/: README.md  __init__.py  file_ops.py  progress.py  validation.py
src/amplifier_app_blog_creator/web/: README.md  __init__.py  app.py  main.py  recipe_executor.py  templates_config.py
src/amplifier_app_blog_creator/web/routes/: configuration.py  content.py  illustrations.py  progress.py  sessions.py
src/amplifier_app_blog_creator/web/static/css/: components.css  layout.css  tokens.css
src/amplifier_app_blog_creator/web/templates/: base.html  complete.html  configuration.html  progress.html  review.html  setup.html
src/amplifier_app_blog_creator/web/templates/components/: footer.html  header.html  stage-indicator.html
tests/: test_session.py
tests/fixtures/: sample_writing_1.md  sample_writing_2.md  test_idea.md
tests/web/: README.md  conftest.py  test_web_ui_e2e.py
