[project]
name = "amplifier-app-blog-creator"
version = "0.1.0"
description = "Complete blog creation workflow: content generation and optional illustration"
authors = [
    {name = "Brian Krabach", email = "briankrabach@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.14",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
blog-creator = "amplifier_app_blog_creator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_app_blog_creator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
exclude = [".venv", "__pycache__", "*.egg-info"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
